# OTUS_Python_Developer

./: ...gitignore.swp.swp  ..gitignore.swp  .gitignore  Dockerfile  README.md
HW_1/: hw_1.py
HW_2/: classes.py  exceptions.py  hw_2.py  main.py
HW_3/: const.py  main.py  models.py  mosru_data.db  server.py
HW_4/: app.py  main.py
HW_4/templates/: base.html  index.html
HW_4/templates/employees/: employee_index.html  staff_info.html
HW_4/views/: employee.py
HW_5/: Dockerfile  Pipfile  main.py  task.txt
HW_5/my-app/: main.py  pyproject.toml
HW_5/my-app/templates/employees/: add_staff.html  staff_info.html
HW_5/templates/: base.html
HW_6/: Dockerfile  docker-compose.yaml  example.py  mosru_data.db  task.txt
HW_6.1/: Dockerfile  docker-compose.yaml
HW_6.1/my-app/: main.py  models.py  pyproject.toml
HW_6.1/my-app/views/: __init__.py
HW_6.2/: Dockerfile  docker-compose.yaml  notes.txt
HW_6.2/serp/: db.sqlite3  manage.py  pyproject.toml
HW_6.2/serp/serpentarium/: asgi.py  settings.py  urls.py  wsgi.py
HW_6.2/serp/snakes/: admin.py  models.py  urls.py  views.py
HW_6.2/serp/tests/: test_serp.py
HW_6/my-scrapper/: config.py  main.py  models.py  mosru_data.db  pyproject.toml
HW_6/my-scrapper/tests/: test_scrapper.py
HW_7/: docker-compose.yaml  run.txt
HW_7/proj_dep/: pyproject.toml  task.txt
HW_7/proj_dep/pd_app/: db.sqlite3  settings.py  urls.py
HW_7/proj_dep/projects/: models.py  views.py
HW_8/proj_dep/pd_app/: settings.py
HW_8/proj_dep/projects/: forms.py  models.py  urls.py  views.py
HW_9/: Dockerfile  task.txt
(+41 files in other folders)
