[tool.poetry]
name = "my-app"
version = "0.1.0"
description = ""
authors = ["Lev Pikulev <pikulev.l.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = {extras = ["dev"], version = "^1.1.2"}
Flask-WTF = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
