[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Lev Pikulev <pikulev.l.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.20"
aiohttp = "^3.7.2"
asyncio = "^3.4.3"
SQLAlchemy-Utils = "^0.36.8"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
